<resources>
    <string name="app_name">MiniWeatherApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">MiniWeatherApp</string>
    <string name="nav_header_subtitle">github.com/minoro75</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_current">Current weather</string>
    <string name="menu_hourly">Hourly weather</string>
    <string name="menu_daily">Daily weather</string>
    <string name="temperature">Temperature</string>
    <string name="feels_like">Feels like</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="lat">Lat:</string>
    <string name="lon">Lon:</string>


    <string name="permission_required_text">Hi, please allow this one to use our app :)</string>
    <string name="_32_414145">32.414145</string>
    <string name="_15_7775">15.7775</string>
</resources>