<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_current">

    <fragment
        android:id="@+id/nav_current"
        android:name="io.minoro75.miniweatherapp.ui.current_weather.CurrentFragment"
        android:label="@string/menu_current"
        tools:layout="@layout/fragment_current" />

    <fragment
        android:id="@+id/nav_hourly"
        android:name="io.minoro75.miniweatherapp.ui.hourly_weather.HourlyFragment"
        android:label="@string/menu_hourly"
        tools:layout="@layout/fragment_hourly" />

    <fragment
        android:id="@+id/nav_daily"
        android:name="io.minoro75.miniweatherapp.ui.daily_weather.DailyFragment"
        android:label="@string/menu_daily"
        tools:layout="@layout/fragment_daily" />
</navigation>